# incident-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: a01d04e830dc_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: admin.py  audit.py  auth.py  jobs.py  streaming.py
backend/app/core/: circuit_breaker.py  exceptions.py  logging.py  metrics.py  middleware.py  redis.py  security.py  tracing.py
backend/app/models/: __init__.py  audit.py  base.py  enums.py  job.py  user.py
backend/app/repositories/: audit.py  base.py  job.py  user.py
backend/app/schemas/: audit.py  auth.py  common.py  job.py  user.py
backend/app/services/: auth.py  job.py
backend/app/utils/: cache.py  rate_limit.py
backend/app/workers/: async_tasks.py  cpu_processors.py  dispatcher.py  kafka_consumer.py  kafka_producer.py  progress.py  queue.py  thread_adapters.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_failure_modes.py  test_jobs.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_cache.py  (+7 more)
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
infra/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  networking.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  variables.tf
scripts/: entrypoint.sh  seed_load_test_users.py
(+24 files in other folders)
