[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "sqlalchemy[mypy]>=2.0.0",

    "types-python-jose>=3.3.4",
    "aiosqlite>=0.20.0",
    "locust>=2.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "--cov=backend/app --cov-report=term-missing --cov-fail-under=70"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/"]
mypy_path = "backend"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["backend/alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818", "UP046"]

[tool.coverage.run]
omit = ["*/tests/*", "*/alembic/*"]
